# vera-testframework

./: .gitignore  README.md  pyproject.toml  tutorial.ipynb
.github/workflows/: publish-to-pypi.yml
src/vera_testframework/: utils.py
src/vera_testframework/pyspark/: __init__.py  referentiedata.py
tests/: conftest.py
tests/pyspark/referentiedata/: test_ReferentiedataTest.py
