[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vera-testframework"
dynamic = ["version"]
description = "Testframework voor VERA referentiedata"
authors = [
    {name = "Woonstad Rotterdam", email = "info@woonstadrotterdam.nl"},
    {name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl"},
]
keywords = ["vera", "referentiedata", "test", "testframework", "aedes"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9.5"
license = {file = "LICENSE"}
dependencies = [
    # pyspark not specified here because it creates conflicts with databricks.
    "pyspark-testframework>=2.0.0",
    "requests>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pre-commit==3.*",
    "pytest==8.*",
    "pytest-cov==5.*",
    "pyspark==3.*"
]
dev = [
    "vera-testframework[test]",
    "ruff==0.4.8"
]

[tool.pytest.ini_options]
addopts = "--cov=vera_testframework --cov-report term --cov-report lcov:lcov.info"

[tool.coverage.run]
omit = [
    # omit generated code
    "src/vera_testframework/_version.py",
]

[tool.setuptools_scm]
version_file = "src/vera_testframework/_version.py"

[project.urls]
Homepage = "https://github.com/woonstadrotterdam/vera-testframework"
Issues = "https://github.com/woonstadrotterdam/vera-testframework/issues"

[tool.setuptools]
packages = ["vera_testframework"]
package-dir = {"" = "src"}
include-package-data = true
package-data = {"vera_testframework" = ["data/*.csv"]}
